# Hasker-Poor-Man-s-Stackoverflow

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
src/: uwsgi_config.ini
src/api/: serializers.py  tests.py  urls.py  views.py
src/config/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/hasker/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  managers.py  mixins.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
src/hasker/migrations/: 0001_initial.py  0002_answer_rating_useranswerrating.py  0003_userquestionrating_question_rating_alter_tag_name_and_more.py  0004_alter_answer_options_alter_question_options_and_more.py  0005_useranswerrating_is_like_userquestionrating_is_like.py  0006_alter_question_options.py
src/hasker/templates/hasker/: _question.html  answer.html  ask.html  index.html  question.html  search.html
src/templates/: 404.html  500.html  _header.html  _pag.html  base.html  header.html  pag.html
src/users/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
src/users/migrations/: 0001_initial.py
src/users/templates/users/: auth.html  logout.html  reg.html  register_done.html  settings.html
src/users/test/: mocks.py
