[tool.poetry]
name = "hasker-poor-man-s-stackoverflow"
version = "0.1.0"
description = ""
authors = ["Зимин Николай <Nikola.Zimin@x5.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.2"
django-debug-toolbar = "^3.7.0"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.4"
uwsgi = "^2.0.20"
pillow = "^9.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-isort = "^5.0.0"
flake8-commas = "^2.1.0"
mypy = "^0.982"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
